ref #836: fix styling of media manager iframe (remove horizontal and most of the time the vertical scrollbar), set usages table header to bold

--- a/src/CoreBundle/Resources/public/themes/standard/css/global.css
+++ b/src/CoreBundle/Resources/public/themes/standard/css/global.css
@@ -170,7 +170,7 @@ legend {
 }
 .button-element {
     margin-left: -3px!important;
-    margin-right: -3px!important;
+    margin-right: 0px!important;
 }
 
 .button-element .button-item {
@@ -398,4 +398,3 @@ Bootstrap 4 addons.
 .cke_panel iframe {
     min-height: initial;
 }
-
