--- a/src/MediaManagerBundle/Resources/public/css/mediaManager.css
+++ b/src/MediaManagerBundle/Resources/public/css/mediaManager.css
@@ -439,7 +439,7 @@
 .snippetMediaManagerDetail .details .edit-form iframe {
     width: 100%;
     border: none;
-    height: 100%;
+    height: 50vh;
     min-height: 450px;
     overflow-x: hidden;
 }
@@ -468,4 +468,3 @@
     max-height: 150px;
     border: 1px solid #ccc;
 }
-
